feat: add brightness/contrast controls and BMP preview generation
- add brightness (-br) and contrast (-ct) controls for 1bpp mode
- add --bmp option for BMP preview generation
- fix pixel order in horizontal scan mode for 1bpp
- refactor BMP structures into bmp_defs.h module
- add bmp_writer module for BMP file generation
- add preview images generation scripts with configurable output directory
- update project structure with scripts/ and preview/ directories

--- a/bmp_to_xbpp.vcxproj
+++ b/bmp_to_xbpp.vcxproj
@@ -142,12 +142,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="defs.h" />
+    <ClInclude Include="bmp_defs.h" />
     <ClInclude Include="bmp_reader.h" />
+    <ClInclude Include="bmp_writer.h" />
+    <ClInclude Include="options.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bmp_to_xbpp.c" />
     <ClCompile Include="bmp_reader.c" />
+    <ClCompile Include="bmp_writer.c" />
+    <ClCompile Include="options.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
