feat: add custom palette support and refactor palette system
- add predefined palettes support for preview images
- add custom palette support with -cf/-cl options for both 1bpp and 4bpp
- refactor: unify palette functions into single generate_palette with PaletteContext
- add linear interpolation for custom palettes
- simplify palette constants and update CLI interface

--- a/bmp_to_xbpp.vcxproj
+++ b/bmp_to_xbpp.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="bmp_defs.h" />
     <ClInclude Include="bmp_reader.h" />
     <ClInclude Include="bmp_writer.h" />
+    <ClInclude Include="bmp_palette.h" />
     <ClInclude Include="options.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
@@ -152,6 +153,7 @@
     <ClCompile Include="bmp_to_xbpp.c" />
     <ClCompile Include="bmp_reader.c" />
     <ClCompile Include="bmp_writer.c" />
+    <ClCompile Include="bmp_palette.c" />
     <ClCompile Include="options.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
