--- a/bmp_to_xbpp.vcxproj.filters
+++ b/bmp_to_xbpp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="bmp_writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="bmp_palette.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="options.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="bmp_writer.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bmp_palette.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="options.c">
