feat: Add centralized versioning system
- add VERSION file for single source of truth
- add update_version.sh/bat scripts for auto-generating version.h
- update Makefile and Visual Studio projects with pre-build events
- add version constants (VERSION_STRING, BUILD_DATETIME, etc.)
- update .gitignore to exclude generated version.h

--- a/bmp_to_xbpp.vcxproj
+++ b/bmp_to_xbpp.vcxproj
@@ -84,6 +84,10 @@
     <CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <PreBuildEvent>
+      <Command>scripts\update_version.bat</Command>
+      <Message>Generating version.h...</Message>
+    </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
@@ -96,6 +100,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <PreBuildEvent>
+      <Command>scripts\update_version.bat</Command>
+      <Message>Generating version.h...</Message>
+    </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -112,6 +120,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <PreBuildEvent>
+      <Command>scripts\update_version.bat</Command>
+      <Message>Generating version.h...</Message>
+    </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
@@ -124,6 +136,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <PreBuildEvent>
+      <Command>scripts\update_version.bat</Command>
+      <Message>Generating version.h...</Message>
+    </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -148,6 +164,7 @@
     <ClInclude Include="bmp_palette.h" />
     <ClInclude Include="options.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bmp_to_xbpp.c" />
