--- a/bmp_to_xbpp.vcxproj.filters
+++ b/bmp_to_xbpp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bmp_to_xbpp.c">
